# ingestion

./: .gitignore  Makefile  README.md  STRUCTURE.md  __init__.py  docker-compose.airflow.yml  docker-compose.infra.yml  docker-compose.observability.yml  docker-compose.services.yml  pyproject.toml  requirements-dev.txt  service-manifest.yaml
.github/workflows/: ci-cd.yml  ci.yml
airflow/: Dockerfile  airflow_settings.yaml
airflow/dags/: dynamic_connectors_loader.py  maintenance_dag.py  market_caiso_dag.py  market_miso_dag.py  program_metrics_loader_dag.py
airflow/plugins/: connector_operator.py  quality_check_sensor.py  seatunnel_operator.py
configs/: aggregation_policies.yaml  data_quality_rules.yaml  enrichment_taxonomy.yaml  normalization_rules.yaml  projection_policies.yaml
configs/alertmanager/: alertmanager.yml
configs/clickhouse/: carbon_ingestion.xml
configs/clickhouse/schemas/: bronze.sql  gold.sql  (+1 more)
configs/opentelemetry/: otel-collector.yml
configs/prometheus/: prometheus.yml
connectors/: shared_extractors.py
connectors/aeso/: __init__.py  config.py  connector.py  connector.yaml  extractor.py  transform.py
connectors/base/: __init__.py  base_connector.py  connector_registry.py  contract_validator.py  exceptions.py  kafka_consumer.py  kafka_producer.py  utils.py
connectors/caiso/: __init__.py  config.py  connector.py  connector.yaml  extractor.py  oasis_client.py  snapshot_exporter.py  transform.py
connectors/caiso_oasis/: README.md  __init__.py  config.py  connector.py  connector.yaml  extractor.py  oasis_client.py
connectors/carb_ct/: connector.yaml
connectors/cec_demand/: connector.yaml
connectors/cross_cutting_loaders/: README.md
connectors/csv_market_ticks/: __init__.py  producer.py
connectors/eia_860_861_923/: config.py  connector.yaml  extractor.py
connectors/epa_cems/: connector.yaml
connectors/ercot/: config.py  connector.py  connector.yaml  extractor.py  snapshot_exporter.py  transform.py
connectors/isone/: config.py  connector.py  connector.yaml  extractor.py  transform.py
connectors/miso/: __init__.py  config.py  connector.py  connector.yaml  extractor.py  snapshot_exporter.py  transform.py
connectors/noaa_hydro/: connector.yaml
connectors/nyiso/: config.py  connector.py  connector.yaml  extractor.py  transform.py
connectors/pjm/: config.py  connector.py  connector.yaml  extractor.py  transform.py
docs/: deployment-guide.md  observability-guide.md  operations-runbook.md  secrets-management.md  troubleshooting-playbook.md
events/avro/: curve_prestage.avsc  curve_update.avsc  dq_anomaly.avsc  enriched_tick.avsc  normalized_tick.avsc  ohlc_bar.avsc  rolling_metric.avsc
examples/: market_ticks_sample.csv
examples/caiso/: README.md  basic_usage.py  batch_processing.py  caiso_config_advanced.yaml  caiso_config_basic.yaml  caiso_config_production.yaml  error_handling.py  integration_example.py  real_time_monitoring.py  sample_enriched_data.json  sample_normalized_data.json  sample_raw_data.json  test_examples.py
examples/pipeline/: README.md  raw_pipeline.py  raw_pipeline_config.yaml
helm/carbon-ingestion/: Chart.yaml  values.yaml
k8s/: aggregation-service.yaml  configmap.yaml  enrichment-service.yaml  namespace.yaml  normalization-service.yaml  projection-service.yaml  refdata-producer-cronjob.yaml
scripts/: apply_clickhouse_schemas.py  connector_manager.py  create_refdata_topics.sh  deploy.sh  generate_connectors_index.py  rollback.sh  validate_schemas.py
seatunnel/jobs/: caiso_daily.conf  miso_realtime.conf  template.conf
services/: __init__.py  service_normalization
services/service-aggregation/: Dockerfile  requirements.txt  service-manifest.yaml
services/service-connector-registry/: Dockerfile  requirements.txt  service-manifest.yaml
services/service-data-quality/: Dockerfile  requirements.txt  service-manifest.yaml
services/service-enrichment/: Dockerfile  requirements.txt  service-manifest.yaml
services/service-normalization/: Dockerfile  requirements.txt  service-manifest.yaml
services/service-projection/: Dockerfile  README.md  requirements.txt  service-manifest.yaml
services/service-refdata-producer/: Dockerfile  requirements.txt  service-manifest.yaml
tests/: conftest.py
tests/examples/: test_raw_pipeline.py
tests/integration/: test_end_to_end.py  test_kafka_integration.py  test_projection_integration.py
tests/utils/: __init__.py  import_helpers.py
(+82 files in other folders)
